--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
     padding-left:20px;
     width:200px;
     height: 100%;
-    background:rgb(13, 6, 36);
+    background:black;
     position: fixed;
     top:0;
     left:0;
@@ -96,9 +96,10 @@ html, body {
     transition: 0.3s;
 }
 #sideBarButton{
-    float:right;
-    margin-left:35px;
-    position: absolute;
+    float:left;
+    margin-left:15px;
+    margin-top:15px;
+    position: relative;
     background:none;
     outline:none;
     border:none;
@@ -106,7 +107,7 @@ html, body {
 }
 
 #header{
-
+    margin-top:-30px;
     text-align:center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: bold;
@@ -119,16 +120,16 @@ html, body {
 }
 
 .mainContentHome{
-    width: 94.5vw;
-    height:400px;
-    margin:40px;
+    width: 97.5vw;
+    height:600px;
+    margin:15px;
     border-radius:0px;
     background:red;
     margin-top:25px;
 }
 
 .overlay{
-
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: relative;
     width:100%;
     height: 100%;
@@ -140,7 +141,14 @@ html, body {
     transition-duration:0.3s;
     backdrop-filter: blur(3px);
     background: rgba(120,120,120,0.6);
-    color:black;
+    color:white;
+}
+
+#overlaytext1{
+    position: relative;
+    top:50%;
+    left:8%;
+
 }
 
 #content1{
