--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ html, body {
 
 #navbar{
     padding-top:30px;
-    padding-left:20px;
-    width:200px;
+    padding-left:0px;
+    width:0px;
     height: 100%;
     background:black;
     position: fixed;
@@ -91,7 +91,7 @@ html, body {
     padding-top:20px;
     width:100%;
     height:100%;
-    margin-left:200px;
+    margin-left:0px;
     padding-bottom:40px;
     transition: 0.3s;
 }
@@ -120,11 +120,11 @@ html, body {
 }
 
 .mainContentHome{
-    width: 97.5vw;
+    width: 97.5%;
     height:600px;
     margin:15px;
     border-radius:0px;
-    background:red;
+    background:grey;
     margin-top:25px;
 }
 
@@ -138,24 +138,146 @@ html, body {
     z-index:2;
 }
 .overlay:hover{
-    transition-duration:0.3s;
+  
     backdrop-filter: blur(3px);
-    background: rgba(120,120,120,0.6);
+    background-image: linear-gradient( rgba(50,50,50,0.0),rgba(50,50,50,1));
     color:white;
+    transition-duration:1.5s;
+}
+
+#content2{
+    background:transparent;
+
+    height: 400px;
 }
 
 #overlaytext1{
     position: relative;
     top:50%;
     left:8%;
-
 }
 
 #content1{
-    background-image:url(image/content1.png);
+    background-repeat: no-repeat;
+    background-image:url(image/Test2.png);
+    background-size: cover;
+}
+
+
+.carouselCard{
+    vertical-align: top;
+    border-radius:20px;
+    top:0;
+    left:0px;
+    position: relative;
+    display:inline-block;
+    width:200px;
+    height:300px;
+    background:whitesmoke;
+    margin:30px;
+    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 6px 10px 0 rgba(0,0,0,0.19);
+    transition-duration: 0.5s ;    
+
+}
+
+.carouselCard:hover{
+    transition-duration: 0.5s ;    
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.1);
+    cursor: pointer;
+} 
+
+#containerSlider{
+    position: relative;
+    left:0px;
+    width:max-content;
+    height: auto;
+    transition:0.8s;
+}
+
+#carousel{
+    float: left;
+    position: absolute;
+    width: 50%;
+    overflow:hidden;
+    transition:0.8s;
+    max-width: 100%;
+}
+
+.textCard{
+    margin-left:20px;
+    color:rgb(40,40,40);
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+#narrativeText{
+    z-index:1;
+    position: relative;
+    top:0;
+    margin-left: 55%;
+    margin-top:0px;
+    display:inline-block;
+    padding-right: 10px;
+    padding-left:10px;
+    padding-bottom:30px;
+    z-index: 2;
+    
+
+
+}
+#content2{
+    overflow: hidden;
+    display:flex;
+
+}
+
+.narrativeTextInside{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:rgb(40,40,40);
+    text-align: justify;
+}
+
+#overlay2{
+    background:white;
 }
 
   @media screen and (max-height: 450px) {
     .navBar {padding-top: 15px;}
     .navBar a {font-size: 18px;}
   }
+
+  #toggleArrow{
+    position: relative;
+    display: inline-block;
+    top:40%;
+    margin-left:49%;
+    transition:0.8s;
+    
+  }
+
+
+.rightButton{
+    width:50px;
+    height:50px;
+    border-radius:50%;
+    border-radius:50%;
+    border:none;
+     backdrop-filter:blur(3px);
+    background:transparent;
+    background-image: url(image/arrow-right-short.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.rightButton:hover{
+    background:rgba(140,140,140,0.3);
+    background-image: url(image/arrow-right-short.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transition-duration: 1s;
+}
+
+.toggleButton:hover{
+    
+
+}
