--- a/style.css
+++ b/style.css
@@ -126,12 +126,10 @@ html, body {
     border-radius:0px;
     background:grey;
     margin-top:25px;
+    margin-left:20px;
 }
 
 .overlay{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    position: relative;
-    width:100%;
     height: 100%;
     background: rgba(120,120,120,0.0);
     color: rgba(120,120,120,0.0);
@@ -153,14 +151,18 @@ html, body {
 
 #overlaytext1{
     position: relative;
+    width:60%;
     top:50%;
     left:8%;
+    padding-bottom: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #content1{
     background-repeat: no-repeat;
     background-image:url(image/Test2.png);
-    background-size: cover;
+    background-size:cover;
+    
 }
 
 
@@ -219,9 +221,13 @@ html, body {
     padding-left:10px;
     padding-bottom:30px;
     z-index: 2;
-    
 
 
+
+}
+
+#narrativeText p{
+    width:60%;
 }
 #content2{
     overflow: hidden;
@@ -239,10 +245,7 @@ html, body {
     background:white;
 }
 
-  @media screen and (max-height: 450px) {
-    .navBar {padding-top: 15px;}
-    .navBar a {font-size: 18px;}
-  }
+
 
   #toggleArrow{
     position: relative;
@@ -277,7 +280,37 @@ html, body {
     transition-duration: 1s;
 }
 
-.toggleButton:hover{
-    
+#footer{
+    width: 100%;
+    height: 30px;
+}
+
+@media all and (max-width:450px){
+    .mainContentHome{
+        width:88%;
+        height:50%;
+        overflow:scroll;
+    }
+    #overlay1{    
+        height:max-content;
+    }
+    #carousel{
+        overflow:scroll;
+        width:100%
+    }
+    #narrativeText{
+        position: relative;
+        float: none;
+        margin-left:10px;
+        margin-top: 80%;
+        width:80%;
+    }
+    #content2{
+        width: 100%;
+        height:max-content;
+    }
+    #toggleArrow{
+        visibility: hidden;
+    }
 
 }
