--- a/styleTwo.css
+++ b/styleTwo.css
@@ -36,6 +36,10 @@
     border:none;
     outline:none;
 }
+body{
+    width:100%;
+    height:100%;
+}
 #mainbody{
     margin-top:100px;
 }
@@ -69,7 +73,8 @@
 }
     
 #bannerInnerText{
-    height:max-content;
+    height:fit-content;
+    width:fit-content;
     padding-top:15%;
     padding-bottom:15%;
     margin-left:5%;
@@ -91,9 +96,63 @@
     font-size:40px;
 }
 
+#introductorytext{
+    margin-top:-20px;
+    z-index:5;
+    color:rgb(220, 190, 230);
+    font-family:"Poppins";
+    font-size: 30px;
+    animation-name:wordchangemade;
+    animation-duration:1s;
+    animation-iteration-count: 20;
+}
+#cardflex{
+    display:flex;
+    flex-wrap: wrap;
+}
+.cardskill{
+    position: relative;
+    width:160px;
+    height:160px;
+    border-radius:10%;
+    margin:10px;
+    background:linear-gradient(45deg,rgba(148, 255, 209,0.6)10%,rgba(217, 200, 224,0.4)90%);
+    border:0.53px solid rgba(220, 190, 230,0.3);
+    backdrop-filter: blur(5px);
+    transition-duration:0.8s;
+}
+#introductorytext p{
+    animation:none;
+    font-family:'Gruppo';
+    text-align:justify;
+}
+
+@keyframes wordchangemade{
+    0%{
+        font-style:normal;
+    }
+    50%{
+        font-style:italic;
+    }
+    100%{
+        font-style:normal;
+    }
+}
+@-webkit-keyframes wordchangemade{
+    0%{
+        -webkit-font-style:normal;
+    }
+    50%{
+        -webkit-font-style:italic;
+    }
+    100%{
+        -webkit-font-style:normal;
+    }
+}
 .roundImage{
     margin-left:auto;
     margin-right:auto;
+    transition-duration: 0.8s;
     border-radius: 50%;
     width:300px;
     height:300px;
@@ -108,6 +167,53 @@
     background-size:cover;
 
 }
+#section2{
+    margin-top:100px;
+}
+#animateskilltext{
+    display:inline-block;
+}
+#skilltext{
+    font-family:'Poppins';
+    font-size:30px;
+    text-align:center;
+    color:rgb(220, 190, 230);
+    transform:skew(10deg,-5deg);
+}
+#skilltext p{
+    font-family: "Gruppo";
+    margin-top:-50px;
+}
+#skillholder{
+
+    width:fit-content;
+    height:fit-content;
+
+}
+#cont4{
+    display: block;
+}
+
+.cardskill h1{
+    margin-left:15px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:rgba(190, 230, 217, 0.8);
+    
+}
+#card1:hover{
+    transform:skew(-10deg,5deg);
+    transition-duration:0.8s;
+}
+#card2:hover{
+    transform:skew(-5deg,-10deg)
+}
+#card3:hover{
+    transform:skew(-2deg,15deg)
+}
+#card4:hover{transform:skew(2deg,12deg)}
+#card5:hover{transform:skew(5deg,5deg);}
+#card6:hover{transform:skew(9deg,0deg)}
+
 .icons i{
       color:rgb(227, 145, 255);
 }
@@ -162,6 +268,13 @@ transform:skew(5deg,20deg);
     #bannerInnerText{
         font-size:7vw;
     }
+    #introductorytext{
+        text-align:center;
+        font-size:5vw;
+    }
+    #introductorytext p{
+        text-align:center;
+    }
     #bannerInnerText p{
         margin-top:-20px;
     }
@@ -174,5 +287,14 @@ transform:skew(5deg,20deg);
         width:100%;
         justify-content: center;
         margin-left:0;
+    }
+    #skilltext{
+        transform:none;
+    }
+    #skillholder{
+        width:400px;
+        margin-left:auto;
+        margin-right:auto;
+        padding-left:30px;
     }
 }
